--- a/src/index.css
+++ b/src/index.css
@@ -20,7 +20,7 @@ body {
 .App {
   display: flex;
   flex-direction: column;
-  justify-content: center;
+  justify-content: flex-start;
   align-items: center;
   height: 100vh;
   width: 100%;
