Title and Color Change

--- a/src/index.css
+++ b/src/index.css
@@ -32,7 +32,7 @@ body {
 header {
   width: 100%;
   padding: 0 0.25em;
-  background-color: mediumblue;
+  background-color: #008bff;
   color: aliceblue;
   display: flex;
   justify-content: space-between;
@@ -52,7 +52,7 @@ main {
 footer {
   width: 100%;
   padding: 0.25em;
-  background-color: mediumblue;
+  background-color: #0d0d0d;
   color: aliceblue;
   display: grid;
   place-content: center;
